INCLUDES = -I$(top_srcdir)/include
noinst_LIBRARIES=../lib/libtimewheel.a
___lib_libtimewheel_a_SOURCES=SingeletonTimeDriver.cpp \
			 TimeDriverBySelect.cpp \
			 TimeDriverByTimeFd.cpp\
			TimeDriver.cpp \
			TimeHelper.cpp \
			Timer.cpp \
			TimeWheel.cpp 


# NOTE: link against to local generated lib, MUST use LDADD
#EXTRA_DIST = 
